--- a/css/style.css
+++ b/css/style.css
@@ -223,3 +223,161 @@ h2.title {
     padding: 86px 0 79px 0;
     background: url('../img/back2.png') center center/ cover no-repeat;
 }
+
+.finish .finish_wrapper {
+    margin-top: 41px;
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.finish .finish_wrapper .finish_item {
+    width: 204px;
+}
+
+
+.finish .finish_wrapper .finish_item .finish_round {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    width: 115px;
+    height: 115px;
+    background-color: #b4e2ff;  
+    border-radius: 100%; 
+}
+
+.finish .finish_wrapper .finish_item .finish_descr {
+    margin-top: 25px;
+    text-align: center;
+    color: #efefef;
+    font-family: Roboto;
+    font-size: 17px;
+    font-weight: 300;
+    line-height: 20px;
+}
+
+.bonus {
+    text-align: center;
+    height: 628px;
+    background-color: #efefef;
+}
+
+.bonus_img {
+    padding-top: 86px;
+}
+
+.bonus_text {
+    padding-top: 42px;
+    color: #252525;
+    font-family: Roboto;
+    font-size: 30px;
+    font-weight: 400;
+    line-height: 43px;
+}
+
+.bonus_button_div {
+    margin-top: 52px;
+    
+}
+
+.bonus_button {
+    width: 313px;
+    height: 72px;
+    box-shadow: inset 0 0 0 rgba(0, 0, 0, 0.18);
+    border: 4px solid rgba(0, 0, 0, 0.11);
+    background-image: linear-gradient(to top, #2798b9 0%, #3ab6da 100%);
+    cursor: pointer;
+    text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.22);
+    color: #ffffff;
+    font-family: "Roboto Condensed";
+    font-size: 19px;
+    font-weight: 400;
+    text-transform: uppercase;
+    outline: none;
+}
+
+.first_web {
+    text-align: center;
+    height: 515px;
+}
+
+.web_img {
+    padding-top: 89px;
+}
+
+.web_title {
+    padding-top: 37px;
+    color: #252525;
+    font-family: Roboto;
+    font-size: 30px;
+    font-weight: 400;
+    line-height: 12px;
+    text-transform: uppercase;
+}
+
+.web_title_start {
+    padding-top: 30px;
+    color: #299cbd;
+    font-family: "Roboto - Black";
+    font-size: 36px;
+    font-weight: 400;
+    line-height: 12px;
+    text-transform: uppercase;
+}
+
+.web_title_finish {
+    padding-top: 25px;
+    color: #4a4a4a;
+    font-family: Roboto;
+    font-size: 23px;
+    font-weight: 400;
+    line-height: 20px;
+}
+
+.footer {
+    text-align: center;
+    height: 166px;
+    background-color: #1a1a1a;
+}
+
+.footer_links {
+    display: flex;
+    justify-content: center;
+    padding-top: 61px;
+
+}
+
+.footer_sup {
+    color: #888888;
+    font-family: Roboto;
+    font-size: 15px;
+    font-weight: 300;
+    line-height: 21px;
+    text-decoration: underline;
+}
+
+.drop {
+    color: #888888;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.footer_conf {
+    color: #888888;
+    font-family: Roboto;
+    font-size: 15px;
+    font-weight: 300;
+    line-height: 21px;
+    text-decoration: underline;
+}
+
+.call_number {
+    color: #888888;
+    font-family: Roboto;
+    font-size: 15px;
+    font-weight: 300;
+    line-height: 21px;
+    text-decoration: underline;
+}
+
